@@ -8,6 +8,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+SH-2011-05-18-0: Bugfix:      output file of "qsub -pty" belongs to UGE admin
+                              user instead of the job user
+                 Issue:       GE-3473
+                 Review:      HP
+
 EB-2011-05-18-0: Bugfix:      start time is not available in qstat -j -xml outp.
                  Issue:       GE-3482
                  Review:      DG
